feed-solution/k8s/feeds-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feeds-web-app
  namespace: feed
  labels:
    app: feeds-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feeds-web-app
  template:
    metadata:
      labels:
        app: feeds-web-app
    spec:
      containers:
        - name: feeds-web-app
          image: localhost/feeds-web-app:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
