feed-solution/k8s/postservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postservice
  namespace: feed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postservice
  template:
    metadata:
      labels:
        app: postservice
    spec:
      containers:
        - name: postservice
          image: localhost/postservice:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
