feed-solution/k8s/timelineservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timelineservice
  namespace: feed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timelineservice
  template:
    metadata:
      labels:
        app: timelineservice
    spec:
      containers:
        - name: timelineservice
          image: localhost/timelineservice:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
