feed-solution/k8s/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  namespace: feed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: localhost/userservice:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
