feed-solution/k8s/postservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postservice
  namespace: feed
spec:
  type: ClusterIP
  selector:
    app: postservice
  ports:
    - name: http
      port: 8080
      targetPort: 8080
