feed-solution/k8s/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  namespace: feed
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - name: http
      port: 8082
      targetPort: 8082
